--- a/marketplace/catalog/templates/catalog/base.html
+++ b/marketplace/catalog/templates/catalog/base.html
@@ -12,9 +12,13 @@
             <div class="space-x-6">
                 <a href="#" class="text-lg font-semibold hover:text-gray-500">New item</a>
                 <a href="#" class="text-lg font-semibold hover:text-gray-500">Something else</a>
-                <a href="#" class="px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">Sign up</a>
-                <a href="#" class="px-6 py-3 text-lg font-semibold bg-gray-500 text-white rounded-xl hover:bg-gray-700">Log in</a>
-
+                {% if request.user.is_authenticated %}
+                    <a href="#" class="px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">Inbox</a>
+                    <a href="#" class="px-6 py-3 text-lg font-semibold bg-gray-500 text-white rounded-xl hover:bg-gray-700">Dashboard</a>
+                {% else %}
+                    <a href="{% url 'catalog:signup' %}" class="px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">Sign up</a>
+                    <a href="{% url 'catalog:login' %}" class="px-6 py-3 text-lg font-semibold bg-gray-500 text-white rounded-xl hover:bg-gray-700">Log in</a>
+                {% endif %}
             </div>
         </nav>
         <div class="px-6 py-">
@@ -31,7 +35,7 @@
                 <h3 class="mb-5 font-semibold text-gray-400">Menu</h3>
                 <ul class="space-y-2">
                     <li><a href="#" class="text-lg text-teal-500 hover:text-teal-700">About</a></li>
-                    <li><a href="{% url 'contact' %}" class="text-lg text-teal-500 hover:text-teal-700">Contact</a></li>
+                    <li><a href="{% url 'catalog:contact' %}" class="text-lg text-teal-500 hover:text-teal-700">Contact</a></li>
                     <li><a href="#" class="text-lg text-teal-500 hover:text-teal-700">Pivacy</a></li>
                     <li><a href="#" class="text-lg text-teal-500 hover:text-teal-700">Terms of use</a></li>
                 </ul>
