--- a/marketplace/catalog/templates/catalog/base.html
+++ b/marketplace/catalog/templates/catalog/base.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{% block title %}{% endblock %}</title>
         <script src="https://cdn.tailwindcss.com"></script>
+        <script src="{% static 'js/mousemoves.js' %}"></script>
+        <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css"  />
+
     </head>
     <body>
-        <nav class="py-6 px-6 flex justify-between items-center border-b border-gray-200">
+        <nav class="py-6 px-6 flex justify-between items-center border-b border-gray-200" id="nav">
             <a href="/" class="text-xl font-semibold">Main page</a>
             <div class="space-x-6">
-                <a href="#" class="text-lg font-semibold hover:text-gray-500">New item</a>
+                <a href="#" class="text-lg font-semibold hover:text-gray-500" id="new_item" onmouseover="new_item_color('red')">New item</a>
                 <a href="#" class="text-lg font-semibold hover:text-gray-500">Something else</a>
                 {% if request.user.is_authenticated %}
                     <a href="#" class="px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">Inbox</a>
                     <a href="#" class="px-6 py-3 text-lg font-semibold bg-gray-500 text-white rounded-xl hover:bg-gray-700">Dashboard</a>
+                    <a href="{% url 'catalog:logout' %}" class="px-6 py-3 text-lg font-semibold bg-gray-500 text-white rounded-xl hover:bg-gray-700">Logout</a>
                 {% else %}
                     <a href="{% url 'catalog:signup' %}" class="px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">Sign up</a>
                     <a href="{% url 'catalog:login' %}" class="px-6 py-3 text-lg font-semibold bg-gray-500 text-white rounded-xl hover:bg-gray-700">Log in</a>
